--- a/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
+++ b/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
@@ -1,1 +1,26 @@
-<p>login-page works!</p>
+
+<div class="page">
+<div class="container">
+  <h1>Log In</h1>
+
+  <form>
+    <input type="email" name="email" placeholder="E-mail">
+    <input type="password" name="pass" placeholder="Password">
+    <a href="#">Log in</a>
+    <div id="remember-container">
+      <input type="checkbox" id="checkbox-2-1" class="checkbox" checked="checked"/>
+      <span id="remember">Remember me</span>
+      <span id="forgotten">Forgotten password</span>
+    </div>
+</form>
+</div>
+
+<!-- Forgotten Password Container -->
+<div id="forgotten-container">
+   <h1>Forgotten</h1>
+  <form>
+    <input type="email" name="email" placeholder="E-mail">
+    <a href="#" class="orange-btn">Get new password</a>
+</form>
+</div>
+</div>
