adecuacion para la vinculacion con el back

--- a/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
+++ b/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
@@ -1,26 +1,37 @@
-
 <div class="page">
-<div class="container">
-  <h1>Log In</h1>
+  <div class="container">
+    <h1>Log In</h1>
 
-  <form>
-    <input type="email" name="email" placeholder="E-mail">
-    <input type="password" name="pass" placeholder="Password">
-    <a href="#">Log in</a>
-    <div id="remember-container">
-      <input type="checkbox" id="checkbox-2-1" class="checkbox" checked="checked"/>
-      <span id="remember">Remember me</span>
-      <span id="forgotten">Forgotten password</span>
-    </div>
-</form>
-</div>
+    <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+      <input 
+         type="user" 
+         name="user" 
+         placeholder="User" 
+         class="form-control form-control-lg" 
+         [(ngModel)]="userName"
+         required>
+      <input 
+         type="password" 
+         name="password" 
+         placeholder="Password" 
+         class="form-control form-control-lg"
+         [(ngModel)]="password" 
+         required>
+      <a href="#">Log in</a>
+      <div id="remember-container">
+        <input type="checkbox" id="checkbox-2-1" class="checkbox" checked="checked" />
+        <span id="remember">Remember me</span>
+        <span id="forgotten">Forgotten password</span>
+      </div>
+    </form>
+  </div>
 
-<!-- Forgotten Password Container -->
-<div id="forgotten-container">
-   <h1>Forgotten</h1>
-  <form>
-    <input type="email" name="email" placeholder="E-mail">
-    <a href="#" class="orange-btn">Get new password</a>
-</form>
-</div>
+  <!-- Forgotten Password Container -->
+  <div id="forgotten-container">
+    <h1>Forgotten</h1>
+    <form>
+      <input type="email" name="email" placeholder="E-mail">
+      <a href="#" class="orange-btn">Get new password</a>
+    </form>
+  </div>
 </div>
