Preparando para la relacion con el back

--- a/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
+++ b/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Log In</h1>
 
-    <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+    <!-- <form #f="ngForm" (ngSubmit)="onLogin()" novalidate> -->
       <input 
          type="user" 
          name="user" 
@@ -23,7 +23,7 @@
         <span id="remember">Remember me</span>
         <span id="forgotten">Forgotten password</span>
       </div>
-    </form>
+    <!-- </form> -->
   </div>
 
   <!-- Forgotten Password Container -->
