Se creo el componente y la ruta para acceder al register

--- a/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
+++ b/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.html
@@ -20,6 +20,8 @@
       <button type="submit">Log in</button>
     </form>
 
+      <button type="submit" (click)="register()">Registrate Ahora</button>
+
       <div id="remember-container">
         <input type="checkbox" id="checkbox-2-1" class="checkbox" checked="checked" />
         <span id="remember">Remember me</span>
