--- a/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.css
+++ b/SantexAcademy/front/src/app/modules/login/login-page/login-page.component.css
@@ -174,3 +174,23 @@
   .orange-btn{
     background: rgba(87,198,255,.5);
   }
+
+  button{
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-decoration: none;
+    position: relative;
+    width: 80%;
+    display: block;
+    margin: 9px auto;
+    font-size: 17px;
+    color: #fff;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 6px;
+    border: none;
+    background: rgba(3,3,3,.1);
+    -webkit-transition: all 2s ease-in-out;
+    -moz-transition: all 2s ease-in-out;
+    -o-transition: all 2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+  }
