Se creo la interfaz para registrar usuarios

--- a/SantexAcademy/front/src/app/modules/login/register-page/register-page.component.html
+++ b/SantexAcademy/front/src/app/modules/login/register-page/register-page.component.html
@@ -1,42 +1,43 @@
+<div class="page">
+  <div class="container">
+    <h1>Registrate Aqui</h1>
 
-<div class="container">
-    <div class="row header">
-      <h1>CONTACT US &nbsp;</h1>
-      <h3>Fill out the form below to learn more!</h3>
-    </div>
-    <div class="row body">
-      <form action="#">
-        <ul>
-          
-          <li>
-            <p class="left">
-              <label for="first_name">first name</label>
-              <input type="text" name="first_name" placeholder="John" />
-            </p>
-            <p class="pull-right">
-              <label for="last_name">last name</label>
-              <input type="text" name="last_name" placeholder="Smith" />      
-            </p>
-          </li>
-          
-          <li>
-            <p>
-              <label for="email">email <span class="req">*</span></label>
-              <input type="email" name="email" placeholder="john.smith@gmail.com" />
-            </p>
-          </li>        
-          <li><div class="divider"></div></li>
-          <li>
-            <label for="comments">comments</label>
-            <textarea cols="46" rows="3" name="comments"></textarea>
-          </li>
-          
-          <li>
-            <input class="btn btn-submit" type="submit" value="Submit" />
-            <small>or press <strong>enter</strong></small>
-          </li>
-          
-        </ul>
-      </form>  
-    </div>
+    <form #f="ngForm" novalidate>
+      <div class="name">
+      <input 
+         type="name" 
+         name="name" 
+         placeholder="Name" 
+         class="form-control form-control-lg" 
+         
+         required>
+      <input 
+         type="lastname" 
+         name="lastname" 
+         placeholder="Lastname" 
+         class="form-control form-control-lg"
+         
+         required>
+        </div>
+        <div class="email-password">
+        <input 
+         type="email" 
+         name="email" 
+         placeholder="Email" 
+         class="form-control form-control-lg"
+         
+         required>
+         <input 
+         type="password" 
+         name="password" 
+         placeholder="Password" 
+         class="form-control form-control-lg"
+         
+         required>
+        </div>
+      <button type="submit">Subscribe</button>
+    </form>
+
   </div>
+
+</div>
