--- a/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
+++ b/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
@@ -1,9 +1,9 @@
-  <head>
+  <head>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">   
   </head> 
-
+  
   <div class="page">
 
     <!-- REDES -->
@@ -49,7 +49,8 @@
       <div class="col-sm-6">
           <div class="container_opciones">
             
-            <!--    EDITAR PREGUNTAS    -->
+          <div *ngIf="showBtn">
+              <!--    EDITAR PREGUNTAS    -->
             <div class="infocardContainer_button">
               <div id="main_button">
                 <img src="../../../../assets/img/icono_enc.png" alt="Editar Preguntas">
@@ -59,6 +60,17 @@
               </div>  
             </div> 
 
+            <!--  DASHBOARD   -->
+            <div class="infocardContainer_button">
+              <div id="main_button">
+                <img src="../../../../assets/img/dashboard.png" alt="Dashboard">
+              </div>
+              <div id="textbois">
+                <a class="a_button" href="#" target="_blank" style="color: black;">Dashboard</a>    
+              </div>            
+            </div> 
+          </div>
+
             <!--  ENCUESTAS    -->
             <div class="infocardContainer_button">
               <div id="main_button">
@@ -67,16 +79,6 @@
               <div id="textbois">
                 <a class="a_button" href="#" target="_blank" style="color: black;">Encuestas</a>    
                 </div>  
-            </div> 
-
-          <!--  DASHBOARD   -->
-            <div class="infocardContainer_button">
-              <div id="main_button">
-                <img src="../../../../assets/img/dashboard.png" alt="Dashboard">
-              </div>
-              <div id="textbois">
-                <a class="a_button" href="#" target="_blank" style="color: black;">Dashboard</a>    
-              </div>            
             </div> 
 
           <!--  UBICACION    -->
