--- a/SantexAcademy/front/src/app/app.component.html
+++ b/SantexAcademy/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-home-page></app-home-page>
+<!-- <app-home-page></app-home-page> -->
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet> 
 
