Se agrega el model survey y se empieza a desarrollar la creacion de preguntas

--- a/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.html
+++ b/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.html
@@ -34,7 +34,7 @@
                         <h2>Encuesta Turismo Mina Clavero</h2>
                     </span>
                 </span>
-                <button class="button-toolbar" mat-icon-button (click)="backHome()">
+                <button type="button" routerLink="/home" class="button-toolbar" (click)="backHome()" mat-icon-button>
                     <mat-icon>undo</mat-icon>
                 </button>
                 <button class="button-toolbar" mat-icon-button (click)="logout()">
