--- a/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.css
+++ b/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.css
@@ -14,6 +14,7 @@
     height: 100%;
     padding: 0%;
     margin: 0%;
+    overflow-y: scroll;
   }
 
   .container{
@@ -42,7 +43,10 @@
   }
 
   .container-question{
-    margin: 0 2em;
+    margin: 1em;
+    padding: 0.5em;
+    border: 1px solid black;
+    
   }
 
   .container-procedencia {
