--- a/SantexAcademy/front/src/app/modules/encuesta/question/question.component.html
+++ b/SantexAcademy/front/src/app/modules/encuesta/question/question.component.html
@@ -15,7 +15,7 @@
 
   <mat-form-field>
     <mat-label>Tipos de Preguntas</mat-label>
-    <mat-select formControlName="description" (ngModelChange)="defineQuestion()" multiple>
+    <mat-select formControlName="description" (ngModelChange)="defineQuestion()" multiple novalidate>
       <mat-option 
          *ngFor="let qt of descriptionList" 
          formControlName="description" 
@@ -31,9 +31,15 @@
 
   <div *ngIf="description == 'MultipleChoice' || description == 'MultipleChoice,Redactar'">
     <section class="example-section">
-     <mat-checkbox class="example-margin" formControlName="answer">Opcion 1</mat-checkbox>
-     <mat-checkbox class="example-margin" formControlName="answer">Opcion 2</mat-checkbox>
+      
+        <input type="text" formControlName="optionAnswer">
+        <button type="button" (click)="agregarInput()">Agregar Respuesta</button>
+        <button type="button" (click)="guardarValores()">Guardar Respuestas</button>
     </section>
+    <div *ngFor="let inputValue of listAnswer">
+      <h3>{{inputValue}}</h3>
+    </div>
+      
    </div>
 
   <mat-form-field *ngIf="description == 'Redactar' || description == 'MultipleChoice,Redactar'">
@@ -48,16 +54,9 @@
          matInput>
   </mat-form-field>
 
-
-
   <button type="submit">Create Question</button>
 
-
-
-  <div *ngFor="let r of questionList" class="form-control">
-    <h1>{{r.question}}</h1>
-    <h1>{{r.description}}</h1>
-  </div>
+  
 </form>
 </div>
 
