--- a/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
+++ b/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
@@ -50,14 +50,24 @@
           <div class="container_opciones">
             
          <div *ngIf="isAdmin"> 
-              <!--    Admin Server    -->
+              <!--    ADMIN SERVER   -->
             <div class="infocardContainer_button" routerLink="/adminServer">
               <div id="main_button">
                 <img src="../../../../assets/img/icono_enc.png" alt="Editar Preguntas">
               </div>
               <div id="textbois">
-                <a class="a_button" href="adminServer" style="color: black;">Adminstrator Server</a>    
+                <a class="a_button" href="adminServer" style="color: black;">Gestionar Preguntas</a>    
               </div>  
+            </div> 
+
+             <!--  ENCUESTAS    -->
+             <div class="infocardContainer_button" >
+              <div id="main_button">
+                <img src="../../../../assets/img/question.png" routerLink="/encuesta" alt="Encuesta">
+              </div>
+              <div id="textbois">
+                <a class="a_button" href="encuesta" style="color: black;">Encuestas</a>    
+                </div>  
             </div> 
 
             <!--  DASHBOARD   -->
@@ -69,18 +79,7 @@
                 <a class="a_button" href="#" target="_blank" style="color: black;">Dashboard</a>    
               </div>            
             </div> 
-          </div>
-
-            <!--  ENCUESTAS    -->
-            <div class="infocardContainer_button" >
-              <div id="main_button">
-                <img src="../../../../assets/img/question.png" routerLink="/encuesta" alt="Encuesta">
-              </div>
-              <div id="textbois">
-                <a class="a_button" href="encuesta" style="color: black;">Encuestas</a>    
-                </div>  
-            </div> 
-            
+          </div>                     
 
           <!--  UBICACION    -->
             <div class="infocardContainer_button">
