se habilito la funcion para guardar respuestas de la encuesta

--- a/SantexAcademy/front/src/app/modules/admin-server/admin-server-page/admin-server-page.component.html
+++ b/SantexAcademy/front/src/app/modules/admin-server/admin-server-page/admin-server-page.component.html
@@ -1,1 +1,7 @@
 <p>admin-server-page works!</p>
+
+<div class="new-question">
+    <button (click)="newQuestion()" > 
+        Crear Preguntas
+    </button>
+</div>
