--- a/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.html
+++ b/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.html
@@ -18,16 +18,7 @@
                         <mat-icon>search</mat-icon>
                         <span>Buscar Encuesta</span>
                     </button>
-                    <div *ngIf="isAdmin" class="new-question">
-                        <button mat-menu-item (click)="newQuestion()">
-                            <mat-icon>
-                                <span class="material-symbols-outlined">
-                                    settings_b_roll
-                                </span>
-                            </mat-icon>
-                            <span>Crear Preguntas</span>
-                        </button>
-                    </div>
+                   
                 </mat-menu>
                 <span class="example-spacer">
                     <span class="container-subtitle">
@@ -54,12 +45,13 @@
                 vacaciones.
                 Cabe aclarar que los datos son confidenciales y anónimos.
             </p>
-            <!-- <form (ngSubmit)="createSurvey()" class="formulario" [formGroup]="newSurvey" novalidate> -->
+        <form (ngSubmit)="createSurvey()" class="formulario" [formGroup]="newSurvey" novalidate>
             <div class="container-datos-personales">
                 
                 <mat-form-field class="container-question">
                     <mat-label>Edad</mat-label>
-                    <input matInput>
+                    <input 
+                    matInput>
                 </mat-form-field>
                 <mat-form-field class="container-question">
                     <mat-label>Sexo</mat-label>
@@ -73,13 +65,22 @@
 
             <div *ngFor="let r of questionsList" class="form-control">
                 <div class="container-question">
-                    <h1>{{r.question}}</h1>
+                    <h3>{{r.question}}</h3>
                     <h1>{{r.description}}</h1>
                     
                     <div *ngIf="r.description == 'MultipleChoice' || r.description == 'MultipleChoice,Redactar'">
-                    <div *ngFor="let option of r.optionAnswer.split(',')">
-                        <mat-checkbox class="example-margin">{{option}}</mat-checkbox>
-                    </div>
+                    <section *ngFor="let option of r.optionAnswer.split(',')">
+                        <mat-checkbox 
+                        name="answerSelect"
+                        ngDefaultControl
+                        [value]="option"
+                        (change)="selectAnswer(option, $event)" 
+                        class="form-control form-control-lg"
+                        formControlName="answerSelect"    
+                        >
+                            {{option}}
+                        </mat-checkbox>
+                    </section>
                     </div>
 
                     <div *ngIf="r.description == 'Redactar' || r.description == 'MultipleChoice,Redactar'">
@@ -88,8 +89,8 @@
                 </div>
             </div>
 
-            <button (click)="saveEncuesta()"> Guardar </button>
-        <!-- </form> -->
+            <button type="submit"> Guardar </button>
+        </form>
         </div>
     </div>
 </div>
