verificar el id de las preguntas

--- a/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.html
+++ b/SantexAcademy/front/src/app/modules/encuesta/encuesta-page/encuesta-page.component.html
@@ -83,6 +83,8 @@
                     </section>
                     </div>
 
+                    <button type="button" (click)="verIdQuestion()"> Ver id Preguntas</button>
+
                     <div *ngIf="r.description == 'Redactar' || r.description == 'MultipleChoice,Redactar'">
                         <input type="text">
                     </div>
