--- a/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
+++ b/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
@@ -35,8 +35,8 @@
                   <img src="../../../../assets/img/foto_adm.png"  alt="Mi Imagen">
                 </div>
                 <div id="textbois">
-                  <h1 style="color: black; margin-top: 40px;">Bienvenido, @Admin</h1>
-                  <a href="mailto:limecicila@gmail.com" style="color: black;">admin@gmail.com</a>           
+                  <h1 style="color: black; margin-top: 40px;">Bienvenido, {{user.firstName}}</h1>
+                  <a href="mailto:limecicila@gmail.com" style="color: black;">{{user.email}}</a>           
                 </div>
               </div> 
             </div>   
@@ -56,7 +56,7 @@
                 <img src="../../../../assets/img/editar_1.png" alt="Editar Preguntas">
               </div>
               <div id="textbois">
-                <a class="a_button" href="adminServer" style="color: black;">Gestionar Preguntas</a>    
+                <a class="a_button" href="adminServer" style="color: black;">Administrator Service</a>    
               </div>  
             </div> 
 
