--- a/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
+++ b/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
@@ -53,7 +53,7 @@
               <!--    ADMIN SERVER   -->
             <div class="infocardContainer_button" routerLink="/adminServer">
               <div id="main_button">
-                <img src="../../../../assets/img/icono_enc.png" alt="Editar Preguntas">
+                <img src="../../../../assets/img/preg_1.png" alt="Editar Preguntas">
               </div>
               <div id="textbois">
                 <a class="a_button" href="adminServer" style="color: black;">Gestionar Preguntas</a>    
@@ -63,7 +63,7 @@
              <!--  ENCUESTAS    -->
              <div class="infocardContainer_button" >
               <div id="main_button">
-                <img src="../../../../assets/img/question.png" routerLink="/encuesta" alt="Encuesta">
+                <img src="../../../../assets/img/encuesta_1.png" routerLink="/encuesta" alt="Encuesta">
               </div>
               <div id="textbois">
                 <a class="a_button" href="encuesta" style="color: black;">Encuestas</a>    
@@ -73,7 +73,7 @@
             <!--  DASHBOARD   -->
             <div class="infocardContainer_button">
               <div id="main_button">
-                <img src="../../../../assets/img/dashboard.png" alt="Dashboard">
+                <img src="../../../../assets/img/dash_1.png" alt="Dashboard">
               </div>
               <div id="textbois">
                 <a class="a_button" href="#" target="_blank" style="color: black;">Dashboard</a>    
@@ -84,7 +84,7 @@
           <!--  UBICACION    -->
             <div class="infocardContainer_button">
               <div id="main_button">
-                <img src="../../../../assets/img/ubicacion.png" alt="Maps">
+                <img src="../../../../assets/img/ubic_1.png" alt="Maps">
               </div>
               <div id="textbois">
                 <a class="a_button" href="#" target="_blank" style="color: black;">Ubicación</a>     
@@ -94,7 +94,7 @@
           <!--  CERRAR SESION    -->
             <div class="infocardContainer_button" (click)="logout()">
               <div id="main_button">
-                <img src="../../../../assets/img/icono_salir1.png" alt="Cerrar Sesión">
+                <img src="../../../../assets/img/salir_1.png" alt="Cerrar Sesión">
               </div>
               <div id="textbois">
                 <a class="a_button" href="login" style="color: black;">Cerrar Sesión</a>    
