se creo la estructura del dashboard y se corrigieron detalles

--- a/SantexAcademy/front/src/app/modules/admin-server/admin-server-page/admin-server-page.component.html
+++ b/SantexAcademy/front/src/app/modules/admin-server/admin-server-page/admin-server-page.component.html
@@ -40,19 +40,19 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#0">
+                        <a href="dashboard">
                         <span>Dashboard</span>                
                         <img src="../../../../assets/img/analisis.png" alt="icono dashboard">
                         </a>
                     </li>
                     <li>
-                        <a href="#0">
+                        <a href="home">
                         <span>Usuarios</span>                
                         <img src="../../../../assets/img/grupo.png" alt="icono usuario">
                         </a>
                     </li>
                     <li>
-                        <a href="#0">
+                        <a href="home">
                         <span>Contacto</span>                
                         <img src="../../../../assets/img/contact.png" alt="icono contacto">
                         </a>
