--- a/SantexAcademy/front/src/app/modules/admin-server/newQuestion/question.component.css
+++ b/SantexAcademy/front/src/app/modules/admin-server/newQuestion/question.component.css
@@ -1,9 +1,39 @@
 .container {
-    padding: 5em;
-  }
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: #363434;
+}
 
   .formulario{
+    padding: 2em;
     display: flex;
+    justify-content: center;
+    width: 50em;
+    border: solid 2px #C7B42C;
+    border-radius: 20px 0 20px 0;
+    background-color: #5AA454;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    font-size: larger;
+  }
+
+  button {
+    margin: 0.5em;
+  }
+
+  .label, h2, h3 {
+    color: white;
+  }
+
+  .example-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+#container-label{
+    width: 25em;
   }
