--- a/SantexAcademy/front/src/app/modules/dashboard/dashboard-page/dashboard-page.component.html
+++ b/SantexAcademy/front/src/app/modules/dashboard/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,17 @@
-<p>Page works!</p>
+<div class="container">
+    <div class="container-title">
+        <h1>Dashboard</h1>
+    </div>
+    <div class="container-table">
+    <ngx-charts-advanced-pie-chart
+    [view]="view"
+    [scheme]="colorScheme"
+    [results]="single"
+    [gradient]="gradient"
+    (select)="onSelect($event)"
+    (activate)="onActivate($event)"
+    (deactivate)="onDeactivate($event)"
+    >
+  </ngx-charts-advanced-pie-chart>
+</div>
+</div>
